--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -10,7 +10,9 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
     "patch": "sed -i.bk 's/${Contracts.//' node_modules/@melonproject/protocol/lib/Contracts.js && sed -i.bk 's/}.abi.json/.abi.json/' node_modules/@melonproject/protocol/lib/Contracts.js && sed -i.bk 's/${deploymentId}.json/kovan-kyberPrice.json/' node_modules/@melonproject/protocol/lib/utils/environment/withDeployment.js && rm -rf node_modules/@melonproject/exchange-aggregator/node_modules/@melonproject/",
-    "link": "react-native link react-native-fs && react-native link react-native-tls && react-native link react-native-randombytes"
+    "link": "react-native link react-native-fs && react-native link react-native-tls && react-native link react-native-randombytes",
+    "bundle-android": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res/",
+    "bundle-ios": "react-native bundle --entry-file index.js --platform ios --dev false --bundle-output ios/main.jsbundle --assets-dest ios"
   },
   "dependencies": {
     "@melonproject/exchange-aggregator": "^2.0.0-alpha2",
