--- a/Mobile/ios/MelonInterfaceMobile/Info.plist
+++ b/Mobile/ios/MelonInterfaceMobile/Info.plist
@@ -37,8 +37,20 @@
 			</dict>
 		</dict>
 	</dict>
+  <key>NSCameraUsageDescription</key>
+  <string>Please allow access to camera</string>
+  <key>NSLocationAlwaysUsageDescription</key>
+  <string>Please allow access to location</string>
+  <key>NSLocationWhenInUseUsageDescription</key>
+  <string>Please allow access to location</string>
+  <key>NSMicrophoneUsageDescription</key>
+  <string>Please allow access to microphone</string>
+  <key>NSPhotoLibraryAddUsageDescription</key>
+  <string>Please allow access to photos</string>
+  <key>NSPhotoLibraryUsageDescription</key>
+  <string>Please allow access to photos</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>Please allow access to location</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
