--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -29,7 +29,8 @@
     "stream-browserify": "^2.0.2",
     "vm-browserify": "^1.1.0",
     "web3": "^1.0.0-beta.37",
-    "web3-eth-accounts": "^1.0.0-beta.37"
+    "web3-eth-accounts": "^1.0.0-beta.37",
+    "jsbi": "2.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
