--- a/Web/package.json
+++ b/Web/package.json
@@ -3,16 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@melonproject/protocol": "^1.0.10",
+    "@melonproject/exchange-aggregator": "^2.0.0-alpha2",
+    "@melonproject/protocol": "1.0.0-patched-1",
+    "@melonproject/token-math": "^0.1.6",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0",
     "react-web3": "^1.2.0",
-    "web3": "^1.0.0-beta.37",
-    "web3-eth": "1.0.0-beta.37",
-    "web3-eth-abi": "1.0.0-beta.37",
-    "web3-eth-accounts": "^1.0.0-beta.37",
-    "web3-utils": "1.0.0-beta.37"
+    "web3": "^1.0.0-beta.37"
   },
   "scripts": {
     "start": "react-scripts start",
