--- a/Web/package.json
+++ b/Web/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0",
     "react-web3": "^1.2.0",
+    "react-toggle": "4.1.1",
     "web3": "^1.0.0-beta.37"
   },
   "scripts": {
