--- a/Modules/package.json
+++ b/Modules/package.json
@@ -16,10 +16,10 @@
   "author": "Willie Laubenheimer",
   "license": "MIT",
   "dependencies": {
-    "@melonproject/exchange-aggregator": "^2.0.0-alpha2",
-    "@melonproject/protocol": "^1.0.0-patched-1",
+    "@melonproject/exchange-aggregator": "^0.1.20",
+    "@melonproject/protocol": "1.0.0-patched-1",
     "@melonproject/token-math": "^0.1.6",
-    "web3": "^1.2.6",
+    "web3": "1.0.0-beta.37",
     "web3-eth-accounts": "^1.2.6"
   },
   "devDependencies": {
