--- a/Modules/package.json
+++ b/Modules/package.json
@@ -22,9 +22,7 @@
     "web3": "1.0.0-beta.37",
     "web3-eth-accounts": "^1.2.6"
   },
-  "devDependencies": {
-    "dotenv": "^8.2.0"
-  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   }
